--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -7,9 +7,13 @@
 \usepackage{framed}
 \usepackage{listings}
 
+\usepackage[normalem]{ulem}
+
 \usepackage{multicol}              
 \usepackage{multirow}
 \usepackage{booktabs} 
+
+\usepackage{morefloats}
 
 \usepackage[]{hyperref}
 \definecolor{darkblue}{rgb}{0,0,.5}
@@ -57,8 +61,9 @@ tableofcontents}
 Word in progress. Please send comments to \href{http://florianhartig.wordpress.com/}{http://florianhartig.wordpress.com/}
 
 
-\chapter{Logic and philosophy of science}
+Acknowledgments: Severin Hauenstein for contributions to the chapter on scientific writing
 
+\chapter{Logic and philosophy of science}
 
 \section{What is science?}
 
@@ -114,18 +119,28 @@ For to be possessed of a vigorous mind is not enough; the prime requisite is rig
 \section{Summary: the principles of science}
 
 
-\chapter{Finding a scientific question}
 
-\section{What are valid scientific questions?}
+
+
+\chapter{On top of the published literature, and finding a good scientific question}
 
 
 \section{Literature - standing on the shoulders of giants}
 
-In the following chapters, we'll speak about logic, empiricism 
+
+\subsection{Citation rules}
+
+http://www.nature.com/ng/journal/v47/n4/full/ng.3271.html
+
+Greenberg-Howcitationdistortions-2009
+
+
+\section{What makes a good scientific questions?}
 
 
 
-\chapter{From empirical data to scientific conclusions}
+
+\chapter{From empirical data to scientific conclusions - experimental design and validity}
 
 Assuming you have your question, how can we find an answer to this.
 
@@ -135,7 +150,7 @@ Assuming you have your question, how can we find an answer to this.
 
 Are the things 
 
-\subsubsection{Bias}
+\subsection{Bias}
 
 
 \citep{Ransohoff-Biasasthreat-2005}
@@ -153,7 +168,7 @@ Are the things
 
 
 
-\chapter{Communication}
+\chapter{Communication principles in science}
 
 
 \section{Principles of communication}
@@ -165,15 +180,24 @@ Are the things
 
 Kelleher-Tenguidelineseffective-2011
 
-
 \section{Logical fallacies}
-
 
 
 
 \chapter{Scientific writing}
 
+
 \section{The purpose and the art of writing}
+
+Writing is an essential skill for a professional academic. 
+
+ an important part of the professional life of an academic. It is the communication of (original) results and thus a driver of progress through the expansion of the current state of knowledge \citep{Tischler1978}.
+Of course, there are also personal reasons why one may improve scientific writing skills. Selling an argument and getting recognised for your work primarily depends on the quality of your work but certainly also on the way it is being communicated. 
+The career of researchers and professors depend on their ability to communicate their cause in writing. Even if this does not apply to you yet, a well-thought-out master thesis or report may help you convince your project supervisor leading to better marks.  
+Furthermore, writing helps you thinking: Start early to write your thesis/ project. It will help you structure your thoughts and question your logic \citep{Woodford1967}.
+
+Writing has a dual purpose 
+
 
 Advice on writing essays and theses
 
@@ -187,14 +211,23 @@ Modesty ? Think of your essay or thesis as a piece of craftsmanship. You are an 
 
 Style ? Writing is difficult. Good writing is incredibly hard. If you think writing is no problem for you, you probably haven?t even realized the extent of your writing problems. Read
 
-    My lecture notes on scientific writing (I don?t have then linked here, but I?ll send you a link upon request). The second part is about style. The first part discusses in detail expectations for the different parts (introduction, methods, discussion) or research papers. Respect conventions.
-    This blog post by Brian McGill. The most important point of this post in my opinion: ?The battle for good writing is won sentence by sentence! A good sentence is: short, has the subject and verb together, has an active verb, has the points of emphasis at the beginning and end, and moves the reader along from a familiar launch point at the start to the new information at the end.?
-    Writing tips by Mark Twain. Especially this one: ?As to the Adjective: when in doubt, strike it out.?
- \citep{Gopen-ScienceOfScientific-1990}
 
-Disclaimer ? Different people / disciplines have different opinions about writing. You can?t ?prove? the correctness of style, so be adviced that my suggestions are no natural laws and can be overruled by you as wells as your supervisor or the editor of whatever journal you submit your work.
 
-\section{Structure}
+Now that we established why scientific writing is important to us, we may be interested to know: What is good science writing and how can we improve our skills? 
+
+
+To answer these questions recall the goal of scientific writing; "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind" \citep{Gopen1990}. Therefore it is important to understand that the reader does not only read but interpret the written document. Most readers are familiar with the conventions of science writing and expect to find arguments, sections and statements in relatively fix positions. That is to say, if the writer respects these structural standards the readability is greatly improved. 
+You certainly know the general layout of a scientific article (at least in the (environmental) natural sciences). It is divided in a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns, which lead to a better understanding of the article's messages \citep{Gopen1990,Tischler1978}.  
+
+Establishing a basis to build upon, these "laws of writing" can be taught. However, to become a skilled writer you need to start reflecting about your writing. This is a process that takes time and requires experience. 
+
+In this short note we provide the scientific writing standards and conventions we consider the most important to start with. We split them into elements of structure and style and finally, we present a commented, made-up research article for which we point out the key elements of science writing.
+
+Before you start writing however, you need to be aware of your audience. Who is going to read what you write? This mostly depends on the journal you choose to publish your work. Bearing this in mind the next step is to list your key messages. What is the main message you want to tell people with your paper? Just remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details.
+
+
+\section{Writing style and logic}
+
 
 \subsection*{Sentence Structure}
 
@@ -207,55 +240,195 @@ The first sentence provides the topic of the paragraph. The last sentence should
 
 
 
-
-
-\section{Style}
-
 \href{http://www.economist.com/styleguide/introduction}{http://www.economist.com/styleguide/introduction}
 
 %\href{http://www.nature.com/authors/author_resources/how_write.html}{http://www.nature.com/authors/author_resources/how_write.html}
 
 
 
-\section{Choice of words and common mistakes}
 
-\subsection{Too complicated}
+    This blog post by Brian McGill. The most important point of this post in my opinion: ?The battle for good writing is won sentence by sentence! A good sentence is: short, has the subject and verb together, has an active verb, has the points of emphasis at the beginning and end, and moves the reader along from a familiar launch point at the start to the new information at the end.?
+    Writing tips by Mark Twain. Especially this one: ?As to the Adjective: when in doubt, strike it out.?
+ \citep{Gopen-ScienceOfScientific-1990}
 
-The data \textbf{featured/comprised} a pixel size of 10 (had)
-
-A \textit{subsequent} ANOVA \textit{analysis} \textbf{enabled a quantification of} the impacts of the varied factors (quantified)
-
-There are \textit{a number of records} in the literature \textit{focusing on comparisons} between \textit{sets of }modeling approaches while predicting biomass at plot scale (A number of previous studies has compared modeling approaches to predict biomass at the plot scale)
-
-
-The results of our second experiment suggest - our results suggest
-
-the \textit{explicit} findings of our two experiments
-
-
-\subsection{Not neccessary}
-
-As such, the data consisted ?.
-A total number of 9 samples was 
-
-\subsection{Logic and clarity}
-
-However, yet, still, check if really necessary, and if 
-
-\paragraph{Which and that} Which and that is another common point of confusion. Let's say that we have 10 samples. Compare the two sentences: 1) the samples, which were expose to radiation the day before, were analysed. 2) The samples that were exposed to radiation the day before were analyzed. There is a big difference between the two sentences. 1) says that all samples were exposed to radiation and then analysed 2) implies that not all samples were exposed to radiation, and only those that were were analysed. In grammar, 1) is called a non-restrictive clause, and 2) is called a restrictive clause. "that" always implies a restrictive meaning. We could leave it there, i.e. that 1) Which is non-restrictive, and 2) that is restrictive, and that used the be the rule, but the problem is that the use of "which" for restrictive clauses has crept into the English language. Thus, we can also say 3) The samples which were exposed to radiation the day before were analyzed. Notice that there is a tiny difference to 1) - there is no comma before which. This is the only indicator that allows us to know whether the restrictive or the non-restrictive meaning is implied. Many people are not aware of this difference though. In prose, the distinction may matter little, but for science, my opinion is that clarity goes before style, and I therefore recommend to strictly stay with 1) which for non-restrictive and 2) that for the restrictive meaning.
+Disclaimer ? Different people / disciplines have different opinions about writing. You can?t ?prove? the correctness of style, so be adviced that my suggestions are no natural laws and can be overruled by you as wells as your supervisor or the editor of whatever journal you submit your work.
 
 
 
-\subsection{Positive presentation}
 
-Another common problem are defensive, 
 
-Here, we aim / this study tries  ; There is no try, do it. Better: the objective of this study was to  / we examine / ...  
+\section{The structure of a scientific article}   
+% general strucutre
+On the largest unit of discourse the research paper comprises a title, abstract, keywords, and an introduction, methods, results and discussion section (and where required appendices). 
+This structure somewhat forces the writer to repeat the story of the paper over and over again. In the end  it should be told roughly $3\frac{3}{4}$ times -- once with the title, once with the abstract, a quarter in the introduction, half in the discussion/ conclusion, and again once with the whole article.
 
-It seems that ; sounds as if you are not certain at all. OK if this is on a subject on which one can only specualate. Not OK if you could find out more.
+%hourglass structure
+Another structural element concerning the general layout is the "hourglass structure". This means the writer should start off with general information, becoming then more and more specific and completing with a link to the general again. Yet, it only applies to the abstract and (more flexibly) to the whole article.\\
+ 
+%individual sections/elements
+%title
+\paragraph{Title}
+Zooming in to the next smaller unit of discourse we start off with the title. %\marginnote{\large{\textsc{the title}}}
+Its main purpose is to interest potential readers since 97~\%  of them only read the title. To keep them reading the title should signal the topic. A good tip is to make it precise and informative with a hint at the findings -- it should reflect the main message of the article's story.\\
 
-To the best of our knowledge, no previous study ...  ; This is a borderline case. You will see this expression in scientific articles, and it's OK to use it. However, it does seem insecure. Use it only if you are really not sure, and if you have no means to make sure that what you are saying is correct. 
+%keywords
+\paragraph{Keywords}
+The author is asked to list some keywords, %\marginnote{\large{\textsc{the keywords}}}
+which are usually located right below the abstract. These terms allow people to find the article when searching with ISI web of knowledge. Yet, since Google scans whole documents the keywords are probably not as important as they used to be. Nevertheless, a good strategy is to choose keywords complementary to title and abstract, e.g. for important technical terms that you
+did not want to include in the abstract nor title.\\
 
+%abstract
+\paragraph{Abstract}
+The abstract %\marginnote{\large{\textsc{the abstract}}} 
+is the second time you will tell your story; in fact it can be considered as a mini paper. It starts off by setting the scene with a very short and general introduction. This usually links to the second part: Raise the problem. You can emphasize the research question by indicator words like "however". Here you tell why your work is necessary.\marginnote{To make sure you follow this structure it may be helpful to copy a template into your manuscript.} Third, you briefly delineate your approach. The fourth subsection serves to state the results. Finally, you present your conclusions and discuss the broader significance.\\
+
+%introduction
+\paragraph{Introduction}
+The first main section of the article is the introduction. %\marginnote{\large{\textsc{the introduction}}}
+It comprises four parts: Start of with one or two paragraphs outlining the broad topic and what work has been done before.\marginnote{Go from the general\\ ...to the specific\\ ...but not back to the general.} Here you usually cite a lot of literature showing that you know the current state of knowledge concerning the topic of your study.
+Use another one or two paragraphs to explain the problem, i.e. the gap of knowledge. Here, you may sell your idea and why the knowledge gap needs to be filled.
+Then, delineate your approach in one paragraph: What are your methods; what are the data you used?\marginnote{Make use of indicator words to clarify the role of the individual paragraph: however; problem/ challenge; here we used; we applied; we asked; we tested.}
+Finally, you may list your specific research questions. This subsection does not need to be clearly separated from the approach subsection. It should however, provide a link to the result sections by outlining the work flow of the analysis.\\
+
+%methods
+\paragraph{Methods}
+In the methods section %\marginnote{\large{\textsc{the methods}}}
+the reader learns precisely what has been done. Even though details may be important this section should not take up too many words, since the total amount for the paper is usually fairly limited by the publishing journal\marginnote{Keyword is repdoucibility.}. You will have to make a selection here; technical information, which is necessary to replicate the study (Software version, etc.) can be moved to an (online) appendix. This may even increase the readability. If helpful the methods section may also be divided in subsections such as study area, data, statistical analysis/ model, analysis, etc. Another helpful tip is to add figures. They can greatly enhance the ability of the reader to understand your approach. Furthermore, if there were any problems with your methods, do not discuss them here -- use the discussion for that.\\
+
+%results
+\paragraph{Results}
+Now that you have explained your methods and the course of analysis, present your results in the next section.%\marginnote{\large{\textsc{the results}}}
+Here you will have to make a selection once again. The results you show need to be relevant to your story, and need to match the specific research questions you lay out in the abstract and more importantly at the end of the introduction. To clarify your findings it is helpful to use figures.\marginnote{Facts are better conveyed short and simple!}
+Remember the most important aspect about this section: Your results need to be presented as neutral facts. Do only state what is obvious, but leave speculation for the discussion. You may however give an interpretation and cross links if they are obvious.\\
+
+%discussion/conclusion
+\paragraph{Discussion/ Conclusion}
+Finally, we need to wrap up the article.%\marginnote{\large{\textsc{the discussion/ conclusions}}} 
+The discussion/ conclusion section comes commonly at last but with extensive functionality. It contains a summary of the main findings. Remember here, many of your readers only read this section (and the title)\marginnote{Move from the specific\\ ...to the general.}. It is common to summarize by restating the problem, significance and the methods in the beginning. Secondly, this section is the platform to discuss the results, speculate about reasons and theories and for the connection to other literature.\marginnote{Only discuss the limitations that question/limit the credibility of your results.}
+As was mentioned before, this section is the place where you may tell the reader about the limitations of your approach and possibly the reasons why the main findings are still credible. However, rather establish the domain under which your results are valid; do not question your approach in general. Finally, the reader expects you to provide conclusions, recommendations, applications and questions for further research.\\
+
+\section{Showcase: A commented paper}
+\begin{center}
+	\huge{Tropical forests: Finding the real reason for species richness} \\
+	\vspace{0.3em}
+	\large{Florian Hartig and Severin Hauenstein}\\
+	\vspace{0.3em}
+	\small{\textit{Department of Biometry and Environmental System Analysis, University of Freiburg, 79106 Freiburg, Germany}}\\
+	\vspace{1em}
+	\large{\today}\\
+	\vspace{2em}
+	\textbf{Abstract}\\
+\end{center}
+Tropical forests are some of the most species-rich ecosystems\marginnote{Set the scene} of the world.
+The reason for this, \textbf{however}, is still widely debated\marginnote{Raise the problem}. Hypotheses range from processes related to productivity over environmental stability to the historical changes in geography.
+\textbf{Here}\marginnote{Introduce your approach}, we contrasted these different hypotheses by using data from ... together with ... (fancy new method).
+\textbf{We find that}\marginnote{State your results} hypothesis X seems to be significantly better supported by our data
+than all alternatives we tested. Specifically ... 
+\textbf{In conclusion}\marginnote{Give your conclusions and discuss wider significance}, our study supports the hypothesis that species diversity in the
+tropics is mainly driven by higher productivity. These results challenge some long held
+ideas about geographical stability being the main reason for global diversity
+patterns. They also have important practical applications for mitigation of climate
+change, as ...\\
+\noindent\textbf{Keywords:} Biodiversity -- Primary production -- Floristic structure ...\\
+
+\noindent\textbf{Introduction}\\
+Tropical forests provide a suitable habitat to a vast variety of species. According to XY (19XX) tropical forests make up fo x \% of the planet's biodiversity.\\
+...
+
+Many ecologists have aimed at explaining this phenomena and a large number of hypotheses has been published in recent years (e.g. ABC, 19XX; D\&E, 20XX; FG, 20XX). However, not all of whom have made convincing arguments. To order the state of knowledge validation and comparison of the studies is desperately needed.\\
+...
+
+In this short note, we compare a set of pre-selected hypotheses published by ABC (19XX), D\&E (20XX), FG (20XX) and ... and present a validation of the used approaches. For the latter we used X data provided by XYZ (2014)\\
+... 
+
+We first test X in order to find the difference in Y. As an alternative approach we choose to look at Z for the purpose of XY. Specifically we are interested in species Y. Furthermore, the validation of the hypotheses will provide information about ...\\
+...\\
+In the following we briefly outline the concepts of ... and present our validation approach.\\
+...
+
+\noindent\textbf{Methods}\\
+
+\noindent\textbf{Results}\\
+
+\noindent\textbf{Discussion}\\
+In this study, we used method X to test whether prevalence of A
+is associated to factor B. Our main result is that there is a
+significant correlation of B with A. This correlation, however, was
+only found when factor C was also present.
+
+Our findings support earlier findings of (X, 2005) and (Y, 2002)
+who also found a positive correlation between A and B. The fact
+that this correlation was only present in samples under conditions
+C may also explain previous opposite results such as (ZZ,
+2006,2008), as neither of these previous studies controlled for C.
+The reason for this positive association and the fact that it is
+affected by C is still unknown. We speculate that mechanism R
+could be a reason for this. This idea is given further support by
+the observation that the correlation between A and B is affected
+by C. Such an effect would be expected if R is really the cause of
+this Correlation, as R is dependent on C (XAY, 1968).
+
+
+
+\section{A list of common writing problems}
+
+
+\begin{enumerate}[(A)]
+
+
+\item Strategic writing problems
+\begin{enumerate}
+	\item Do not make statements that are unnecessary for your argument, but could be questioned. 
+	Example: "The two most classic games to simulate the behavior of animals are the Hawk-Dove game and the Prisoner's Dilemma." $\rightarrow$ Others might disagree. Is it really important to be so definite here? Why not say: "Two classic games..."?
+	\item Passive/ Active: See the comments in the lecture notes on scientific writing. In general you should write in an active voice, unless  1) Sentence structure C3 takes precedence, or 2) the thing you talk about is impersonal, was done by another person. More details in the lecture notes. In particular, opinions of your own \textsc{should} be active.
+	\item Be definite - remember Yoda: There is no try, do it. Phrases like: "we attempted to find whether there is" or "this study aims at" sound weak and defensive. Write "we studied whether ...". Also: "to the best of our knowledge ... " This is a borderline case. You will see this expression in scientific articles, and it's OK to use it. However, it does seem insecure. Better to indicate that you made some effort to find out together with such an expression. 	
+	
+ 
+
+\end{enumerate}
+
+\item Logical problems
+\begin{enumerate}
+	\item The stated implication does not follow the argument logically. Example: "Because both models follow different pay-off schemes, it is important to know how a simulation model reacts to different settings." $\rightarrow$ Unclear why it is important to know how simulation reacts to different settings if two models are different.
+	\item "Micrologic": Logical indicators such as "thus", "hence", "however", "nevertheless" have a clear and distinct meaning. "thus", "hence" indicate an implication. "however", "nevertheless" indicate contradicting statements or evidence to the previous proposition.
+\end{enumerate}
+
+
+\item Style
+\begin{enumerate}
+	\item Drop redundant words: Any of the following \textbf{words} can be erased: "\textbf{a total of} n subjects", "the simulations were run with the \textbf{exact} same parameter set as before"
+	\item Pompous/ pontificating style: If something can be said in simple words, it should be said in simple words, i.e. if the only purpose of a sentence is to "sound scientific", it should not be said at all. Examples: The data \textbf{featured/comprised} a pixel size of 10 (had). We utilized (use). We used the model in an integrated framework to facilitate a holistic forecast" (predicting from the model). Tip: Read \citet{Woodford1967}.
+	\item Topic position/ Stress position not properly occupied: The first part of a sentence should give the context. The last part of the sentence should provide the crucial new information, and should relate to what is further discussed. Tip: Read \citet{Gopen1990}.
+	\item A paragraph structures the text into topical units. Use them! Each paragraph should introduce its topic in the beginning, and ideally lead to some conclusion or summary at the end. 
+	\item Unnecessary adjectives. Mark Twain: "As to the adjective: when in doubt, strike it out." Especially adjectives such as "very", "particularly" are often not necessary. Applies also to larger constructs such as "Evolutionary Game Theory \uline{is an important tool to} investigate(s) ..." -- if you erase the underlined text, the sentence remains fine.
+	\item Unclear/ ambiguous expressions: Write as clear and as informative as possible. Avoid ambiguous words like "tends to", "mostly" etc. if you can make a definite statement. Example: "the frequency of cooperators always tends to be zero"  $\rightarrow$ What does that mean? 1) It was always zero or 2) It was zero in 95 \% of the cases or 3) something else.
+\end{enumerate}
+
+\item Grammar and spelling
+
+\begin{enumerate}
+	\item English commas have different rules than in German and other languages \url{http://www.grammarbook.com/punctuation/commas.asp}
+	\item Wrong use of \textbf{which and that} Let's say that we have 10 samples. Compare the two sentences: 1) the samples, which were expose to radiation the day before, were analysed. 2) The samples that were exposed to radiation the day before were analyzed. The important difference is that 1) says all samples were exposed to radiation and then analysed, while 2) implies that not all samples were exposed to radiation, and only those that were were analysed. 1) is called a non-restrictive clause, and 2) is called a restrictive clause. "that" always implies a restrictive meaning. Additional confusion, however, is created by the fact that "which" can in fact be used for both, with a minor modification: if you want to use which restrictive, you have to write 3) The samples which were exposed to radiation the day before were analyzed. Notice that there is a tiny difference to 1) - there is no comma before which. This is the only indicator that allows us to know whether the restrictive or the non-restrictive meaning is implied. Many people are not aware of this difference though. In prose, the distinction may matter little, but for science, my opinion is that clarity goes before style, and I therefore recommend to strictly stay with 1) which for non-restrictive and 2) that for the restrictive meaning.
+\end{enumerate}
+
+
+
+\end{enumerate}
+
+
+\section{Examples}
+
+In the following, I highlighted \uline{redundant words} and other problems
+
+\begin{itemize}
+
+\item A \uline{subsequent} ANOVA \uline{analysis} \textbf{enabled a quantification of} the impacts of the varied factors (quantified)
+
+\item There are \uline{a number of records} in the literature \uline{focusing on comparisons} between \uline{sets of }modeling approaches while predicting biomass at plot scale (A number of previous studies has compared modeling approaches to predict biomass at the plot scale)
+
+\item \uline{As such}, the \uline{explicit} findings of our two experiments showed that \uline{a total of} 9 samples ... 
+
+\end{itemize}
 
 
 \chapter{A working scientists}
